RESOLVED FIXED28162
[Qt] QtLauncher crashes when trying to change zoom level
https://bugs.webkit.org/show_bug.cgi?id=28162
Summary [Qt] QtLauncher crashes when trying to change zoom level
George Wright
Reported 2009-08-10 12:57:44 PDT
Trying to change zoom level on QtLauncher causes the app to abort and exit: george@iridium ~/gwright-sandbox/WebKitBuild/Debug/bin $ ./QtLauncher ASSERT: "i >= 0" in file /home/george/gwright-sandbox/WebKit/qt/QtLauncher/main.cpp, line 169 zsh: abort ./QtLauncher
Attachments
Fix QtLauncher crash (1.34 KB, patch)
2009-08-10 14:15 PDT, George Wright
no flags
George Wright
Comment 1 2009-08-10 14:15:25 PDT
Created attachment 34513 [details] Fix QtLauncher crash The zoomLevels object is only populated if a valid URL is passed to the application on launch, and it is never populated otherwise. This patch simply populates the zoom level no matter whether a valid URL is supplied or not as it does not depend on a valid URL to function correctly.
Eric Seidel (no email)
Comment 2 2009-08-12 15:26:48 PDT
Comment on attachment 34513 [details] Fix QtLauncher crash Adam, since you're a committer, you can just mark this commit-queue+ if you want it committed for you. :) cq=? is for folks who are not committed but want to make sure it's added to the cq.
Eric Seidel (no email)
Comment 3 2009-08-12 15:49:23 PDT
Comment on attachment 34513 [details] Fix QtLauncher crash Clearing flags on attachment: 34513 Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebKit/qt/ChangeLog M WebKit/qt/QtLauncher/main.cpp Committed r47156 M WebKit/qt/QtLauncher/main.cpp M WebKit/qt/ChangeLog r47156 = 2a552d79fea80795059ae47a478f535d24093bdd (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/47156
Eric Seidel (no email)
Comment 4 2009-08-12 15:49:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.