2009-08-12  George Wright  <george.wright@torchmobile.com>

Reviewed by Adam Treat.

        Initialise zoom levels independent of whether a URL is valid or not to
        fix https://bugs.webkit.org/show_bug.cgi?id=28162

        * QtLauncher/main.cpp:
        (MainWindow::MainWindow):

Canonical link: https://commits.webkit.org/38757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47156 268f45cc-cd09-0410-ab3c-d52691b4dbfc